[#29] Downgrade to JDK 8