@@ -3,25 +3,27 @@ package net.biville.florent.repl.exercises;
 import org.junit.Test;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import static com.google.common.collect.ImmutableMap.of;
 import static com.google.common.collect.Maps.newHashMap;
 import static java.util.Arrays.asList;
+import static net.biville.florent.repl.Maps.mutableMap;
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class SolutionsTest {
 
     @Test
     public void computes_record_difference() {
-        List<Map<String, Object>> expectedResult = List.of(
-                Map.of("foo", "bar"),
-                Map.of("baz", "bah")
+        List<Map<String, Object>> expectedResult = asList(
+                mutableMap("foo", "bar"),
+                mutableMap("baz", "bah")
         );
-        List<Map<String, Object>> actualResult = List.of(
-                Map.of("foo2", "bar2"),
-                Map.of("baz", "bah")
+        List<Map<String, Object>> actualResult = asList(
+                mutableMap("foo2", "bar2"),
+                mutableMap("baz", "bah")
         );
 
         SolutionDifference difference = Solutions.difference(actualResult, expectedResult);
@@ -36,8 +38,8 @@ public class SolutionsTest {
 
     @Test
     public void reports_no_difference() {
-        List<Map<String, Object>> expectedResult = List.of(Map.of("foo", "bar"));
-        List<Map<String, Object>> actualResult = List.of(Map.of("foo", "bar"));
+        List<Map<String, Object>> expectedResult = Collections.singletonList(mutableMap("foo", "bar"));
+        List<Map<String, Object>> actualResult = Collections.singletonList(mutableMap("foo", "bar"));
 
         SolutionDifference difference = Solutions.difference(actualResult, expectedResult);
 
@@ -46,11 +48,11 @@ public class SolutionsTest {
 
     @Test
     public void reports_no_difference_for_single_column_results_with_different_columns() {
-        List<Map<String, Object>> expectedResult = List.of(
-                Map.of("first_name", "James")
+        List<Map<String, Object>> expectedResult = Collections.singletonList(
+                mutableMap("first_name", "James")
         );
-        List<Map<String, Object>> actualResult = List.of(
-                Map.of("result.first_name", "James")
+        List<Map<String, Object>> actualResult = Collections.singletonList(
+                mutableMap("result.first_name", "James")
         );
 
         SolutionDifference difference = Solutions.difference(actualResult, expectedResult);
@@ -60,11 +62,11 @@ public class SolutionsTest {
 
     @Test
     public void reports_only_value_difference_for_single_column_results() {
-        List<Map<String, Object>> expectedResult = List.of(
-                Map.of("first_name", "Jamie")
+        List<Map<String, Object>> expectedResult = Collections.singletonList(
+                mutableMap("first_name", "Jamie")
         );
-        List<Map<String, Object>> actualResult = List.of(
-                Map.of("result.first_name", "James")
+        List<Map<String, Object>> actualResult = Collections.singletonList(
+                mutableMap("result.first_name", "James")
         );
 
         SolutionDifference difference = Solutions.difference(actualResult, expectedResult);
@@ -77,14 +79,14 @@ public class SolutionsTest {
 
     @Test
     public void reports_only_value_difference_for_expected_single_column_results() {
-        List<Map<String, Object>> expectedResult = List.of(
-                Map.of("first_name", "Jamie"),
-                Map.of("first_name", "Mary")
+        List<Map<String, Object>> expectedResult = asList(
+                mutableMap("first_name", "Jamie"),
+                mutableMap("first_name", "Mary")
         );
 
-        List<Map<String, Object>> actualResult = List.of(
-                Map.of("result.first_name", "James", "result.last_name", "Dean"),
-                Map.of("result.first_name", "Mariah", "result.last_name", "Carey")
+        List<Map<String, Object>> actualResult = asList(
+                mutableMap("result.first_name", "James", "result.last_name", "Dean"),
+                mutableMap("result.first_name", "Mariah", "result.last_name", "Carey")
         );
 
         SolutionDifference difference = Solutions.difference(actualResult, expectedResult);
